[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/crash_ball/gltf/new_arena/arena.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/crash_ball/GoalLineMM.gd" type="Script" id=2]
[ext_resource path="res://levels/crash_ball/death_line.tres" type="CubeMesh" id=3]
[ext_resource path="res://levels/crash_ball/new_goal_line_mesh.tres" type="QuadMesh" id=4]
[ext_resource path="res://levels/crash_ball/arena.gd" type="Script" id=6]

[sub_resource type="CylinderShape" id=8]
radius = 0.794599
height = 1.16376

[sub_resource type="Environment" id=15]
background_mode = 1

[sub_resource type="GIProbeData" id=7]
bounds = AABB( -5.51842, -2.84551, -5.17123, 11.0368, 5.69101, 10.3425 )
cell_size = 0.0862253
to_cell_xform = Transform( 11.5975, 0, 0, 0, 11.5975, 0, 0, 0, 11.5975, 64, 33.0008, 59.9734 )
dynamic_data = PoolIntArray( 0, 8, 128, 128, 128, 1, 0, 0, 0, 1094713344, 0, 0, 0, 0, 0, 0, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.353684, 0.495894, 3.31989 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 12.8638, 13.0823, 10.3154 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 5, 0.1, 5 )

[sub_resource type="MultiMesh" id=14]
color_format = 1
transform_format = 1
custom_data_format = 1
instance_count = 4
mesh = ExtResource( 4 )
transform_array = PoolVector3Array( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 4.0905, 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -4.0905, -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -4.0905, 0, 0, -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 4.0905, 0, 0 )
color_array = PoolColorArray( 0, 0.603922, 1, 1, 0, 0.603922, 1, 1, 0, 0.603922, 1, 1, 0, 0.603922, 1, 1 )
custom_data_array = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="Arena" type="Spatial"]
script = ExtResource( 6 )

[node name="Mesh" type="Spatial" parent="."]

[node name="arena" parent="Mesh" instance=ExtResource( 1 )]

[node name="Cannons" type="Spatial" parent="."]

[node name="StaticBody4" type="StaticBody" parent="Cannons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.10909, 0.8, -4.09091 )
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Cannons/StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.653436, 0 )
shape = SubResource( 8 )

[node name="Position3D" type="Position3D" parent="Cannons/StaticBody4"]

[node name="StaticBody" type="StaticBody" parent="Cannons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.10132, 0.8, 4.09743 )
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Cannons/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.653436, 0 )
shape = SubResource( 8 )

[node name="Position3D" type="Position3D" parent="Cannons/StaticBody"]

[node name="StaticBody2" type="StaticBody" parent="Cannons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.10455, 0.8, 4.09091 )
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Cannons/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.653436, 0 )
shape = SubResource( 8 )

[node name="Position3D" type="Position3D" parent="Cannons/StaticBody2"]

[node name="StaticBody3" type="StaticBody" parent="Cannons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.10455, 0.8, -4.09546 )
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Cannons/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.653436, 0 )
shape = SubResource( 8 )

[node name="Position3D" type="Position3D" parent="Cannons/StaticBody3"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 15 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 8.35187e-23, 4.37114e-08, -4.37114e-08, 1.91069e-15, 1, 0, -1, 1.91069e-15, 0, 7.07157, 0 )
visible = false
shadow_enabled = true

[node name="GIProbe" type="GIProbe" parent="."]
extents = Vector3( 5.51842, 2.84551, 5.17123 )
data = SubResource( 7 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.44834, 0 )
light_energy = 5.844
shadow_enabled = true
spot_range = 11.575
spot_angle = 55.4886

[node name="Goal_lines" type="Spatial" parent="."]

[node name="1" type="Area" parent="Goal_lines"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 5.4 )
collision_layer = 8
collision_mask = 4

[node name="1" type="CollisionShape" parent="Goal_lines/1"]
shape = SubResource( 10 )

[node name="2" type="Area" parent="Goal_lines"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -5.4 )
collision_layer = 8
collision_mask = 4

[node name="2" type="CollisionShape" parent="Goal_lines/2"]
shape = SubResource( 10 )

[node name="3" type="Area" parent="Goal_lines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.4, 0, 0 )
collision_layer = 8
collision_mask = 4

[node name="3" type="CollisionShape" parent="Goal_lines/3"]
shape = SubResource( 10 )

[node name="4" type="Area" parent="Goal_lines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, 0, 0 )
collision_layer = 8
collision_mask = 4

[node name="4" type="CollisionShape" parent="Goal_lines/4"]
shape = SubResource( 10 )

[node name="Goal_barriers" type="Spatial" parent="."]

[node name="1" type="StaticBody" parent="Goal_barriers"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 4.45 )
collision_layer = 16
collision_mask = 4

[node name="1" type="CollisionShape" parent="Goal_barriers/1"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="Goal_barriers/1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.299644, 0.149213, 1.30979e-08 )
mesh = ExtResource( 3 )
material/0 = null

[node name="2" type="StaticBody" parent="Goal_barriers"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -4.45 )

[node name="2" type="CollisionShape" parent="Goal_barriers/2"]
shape = SubResource( 10 )

[node name="MeshInstance2" type="MeshInstance" parent="Goal_barriers/2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.278238, 0, -1.21622e-08 )
mesh = ExtResource( 3 )
skeleton = NodePath("../../1")
material/0 = null

[node name="3" type="StaticBody" parent="Goal_barriers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.45, 0, 0 )

[node name="3" type="CollisionShape" parent="Goal_barriers/3"]
shape = SubResource( 10 )

[node name="MeshInstance3" type="MeshInstance" parent="Goal_barriers/3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.281479, 0, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("../../1")
material/0 = null

[node name="4" type="StaticBody" parent="Goal_barriers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.45, 0, 0 )

[node name="4" type="CollisionShape" parent="Goal_barriers/4"]
shape = SubResource( 10 )

[node name="MeshInstance4" type="MeshInstance" parent="Goal_barriers/4"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.28293, 0, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("../../1")
material/0 = null

[node name="Spawn_points" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="Spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.05 )

[node name="Position3D2" type="Position3D" parent="Spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.05 )

[node name="Position3D3" type="Position3D" parent="Spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.05, 0, 0 )

[node name="Position3D4" type="Position3D" parent="Spawn_points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.05, 0, 0 )

[node name="RogueBallCatcher" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="RogueBallCatcher"]
shape = SubResource( 12 )

[node name="Floor" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
shape = SubResource( 13 )

[node name="GoalLineMM" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 14 )
script = ExtResource( 2 )

[connection signal="body_exited" from="RogueBallCatcher" to="." method="_on_RogueBallCatcher_body_exited"]
